--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="https://www.griffininsight.com/css/animate.css">
   <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet" />
   <link rel="stylesheet" href="index.css" />
-  <title>Final Project</title>
+  <title>Flora - Home</title>
 </head>
 
 <body>
