--- a/index.html
+++ b/index.html
@@ -148,20 +148,20 @@
       </div>
     </div>
     <div id="footer">
-      <img src="flower.png" alt="">
+      <img class="fadin" src="flower.png" alt="">
        <div class="foot-elm" id="txt1">
         <p id="p1"> Premium Flower Brand From</p>
         <h2>italy</h2>
        </div>
 
-       <div class="foot-elm" id="txt2">
+       <div  class="foot-elm fadin" id="txt2">
          <p id="p2">Not Everybody Has Great Taste In Flowers, So If You Have One,</p>
          <p id="p3"> Get One For You</p>
        </div>
 
-       <h1 class="foot-elm">Get In Touch</h1>
+       <h1  class="foot-elm fadin">Get In Touch</h1>
 
-       <input class="foot-elm" type="email" placeholder="someemail@gmail.com">
+       <input class="foot-elm fadin" type="email" placeholder="someemail@gmail.com">
     </div>
   </div>
 
